# enik-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  export.sh  imgui.ini  mingw.cmake
editor/: CMakeLists.txt  project.enik
editor/assets/scenes/: untitled_scene.escn
editor/assets/shaders/: line_shader.glsl  texture_color.glsl
editor/src/: editor.cpp  editor_layer.cpp  editor_layer.h
editor/src/dialogs/: dialog_confirm.cpp  dialog_confirm.h  dialog_file.cpp  dialog_file.h
editor/src/panels/: animation_editor.cpp  animation_editor.h  debug_info.cpp  debug_info.h  editor_panel.cpp  editor_panel.h  file_system.cpp  file_system.h  inspector.cpp  inspector.h  scene_tree.cpp  scene_tree.h  text_editor.cpp  text_editor.h  toolbar.cpp  toolbar.h
editor/src/tabs/: editor_tab.cpp  editor_tab.h  home_tab.cpp  home_tab.h  prefab_editor_tab.cpp  prefab_editor_tab.h  scene_editor_tab.cpp  scene_editor_tab.h  text_editor_tab.cpp  text_editor_tab.h
editor/src/utils/: editor_assets.cpp  editor_assets.h  editor_colors.h  file_metadata.h  imgui_utils.cpp  imgui_utils.h  sort.cpp  sort.h  utils.cpp  utils.h
engine/: CMakeLists.txt
engine/include/: Enik.h  application.h  asserter.h  base.h  entry_point.h  log.h  pch.h  printer.h
engine/src/: application.cpp  application.h  entry_point.h  imgui_utils.h  input.cpp  log.cpp  main.cpp  ortho_camera_controller.cpp  ortho_camera_controller.h  printer.cpp  window.cpp  window.h
engine/src/asset/: asset.cpp  asset.h  asset_manager.h  asset_manager_base.h  asset_manager_editor.cpp  asset_manager_editor.h  asset_metadata.h
engine/src/asset/importer/: animation_importer.cpp  animation_importer.h  asset_importer.cpp  asset_importer.h  font_importer.cpp  font_importer.h  sound_importer.cpp  sound_importer.h  texture_importer.cpp  texture_importer.h
engine/src/audio/: audio.cpp  audio.h  sound.cpp  sound.h
engine/src/core/: application.cpp  application.h  asserter.h  buffer.h  entry_point.h  input.cpp  input.h  lib_macro.h  log.cpp  log.h  timestep.h  uuid.cpp  uuid.h  window.cpp  window.h
engine/src/events/: application_event.h  event.h  key_codes.h  key_event.h  mouse_codes.h  mouse_event.h
engine/src/layers/: layer.cpp  layer.h  layer_stack.cpp  layer_stack.h
engine/src/layers/imgui_layer/: imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_layer.cpp  imgui_layer.h  imgui_themes.h
engine/src/physics/: collision.cpp  collision.h  physics.cpp  physics.h  physics_body.cpp  physics_body.h  physics_world.cpp  physics_world.h  raycast.h
engine/src/project/: project.cpp  project.h  project_serializer.cpp  project_serializer.h
engine/src/renderer/: buffer.cpp  buffer.h  camera.h  font.h  frame_buffer.cpp  frame_buffer.h  graphics_context.cpp  graphics_context.h  ortho_camera_controller.cpp  ortho_camera_controller.h  orthographic_camera.cpp  orthographic_camera.h  render_command.cpp  render_command.h  renderer.cpp  renderer.h  renderer2D.cpp  renderer2D.h  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  sub_texture2D.cpp  sub_texture2D.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
engine/src/renderer/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_context.cpp  opengl_context.h  opengl_frame_buffer.cpp  opengl_frame_buffer.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cpp  opengl_vertex_array.h  shader.cpp  shader.h
engine/src/scene/: animation.cpp  animation.h  components.cpp  components.h  entity.cpp  entity.h  native_script_fields.h  scene.cpp  scene.h  scene_camera.cpp  scene_camera.h  scene_serializer.cpp  scene_serializer.h  scriptable_entity.cpp  scriptable_entity.h  tween.cpp  tween.h
engine/src/script_system/: extern_functions.cpp  extern_functions.h  script_console.cpp  script_console.h  script_registry.cpp  script_registry.h  script_system.cpp  script_system.h
examples/snake-game/: asset.registry  project.enik
examples/snake-game/assets/audio/: positive.sfxj
examples/snake-game/assets/prefabs/: digit.prefab  part.prefab
examples/snake-game/assets/scenes/: main.escn
examples/snake-game/module/: module.cpp
examples/snake-game/module/api/: enik.h
examples/snake-game/module/src/: button_container.cpp  button_container.h  digit.cpp  digit.h  game_manager.cpp  game_manager.h  main_menu.cpp  main_menu.h  number_display.cpp  number_display.h  snake.cpp  snake.h
examples/squareup/: asset.registry  build.sh  export.sh  project.enik
examples/squareup/assets/: asset.registry
examples/squareup/assets/prefabs/: bullet.prefab  enemy.prefab
examples/squareup/assets/prefabs/weapon/: weapon_base.prefab  weapon_fast.prefab
examples/squareup/assets/scenes/: arena.escn  dead.escn  menu.escn
examples/squareup/assets/tiled/: 1bit.tsx  map.tiled-session  map.tmx
examples/squareup/module/: CMakeLists.txt  module.cpp
examples/squareup/module/src/: bullet.cpp  bullet.h  button_container.cpp  button_container.h  character.cpp  character.h  common.h  dead_score.cpp  enemy.cpp  enemy.h  follow.cpp  follow.h  globals.cpp  globals.h  gui.cpp  gui.h  menu.cpp  menu.h  player.cpp  player.h  spawner.cpp  weapon.cpp  weapon.h
project/: build.sh  project.enik
project/assets/: asset.registry
project/assets/scenes/: scene.escn
project/module/: module.cpp
project/module/api/: enik.h
project/module/src/: player.h
runtime/: CMakeLists.txt
runtime/src/: debug_info.cpp  debug_info.h  runtime.cpp  runtime.h  runtime_app.cpp
sandbox/: CMakeLists.txt
sandbox/assets/shaders/: colorful.glsl  flat_color.glsl  texture.glsl  texture_color.glsl
sandbox/src/: sandbox2D.cpp  sandbox2D.h  sandbox_app.cpp
